# decmani

./: INSTALL.md  README.md
arm_robot_py/: package.xml  setup.cfg  setup.py
arm_robot_py/arm_robot_py/: arm_robot_py.py  go_home_py.py  go_sleep_py.py  pruebas_robot_py.py  soltar_vaso.py
calibration_cpp/: CMakeLists.txt  package.xml
calibration_cpp/src/: calibration_cpp.cpp
camera_py/: package.xml  setup.cfg  setup.py
camera_py/camera_py/: camera_py.py
coord_trans_py/: package.xml  setup.cfg  setup.py
coord_trans_py/coord_trans_py/: coord_trans_py.py  object_point_from_robot.txt
detectron2_py/: package.xml  setup.cfg  setup.py
detectron2_py/detectron2_py/: bbox_py.py  detectron2_py.py  go_aruco_py.py  prueba_aruco_py.py  prueba_imagen_py.py  pruebas_bbox_py.py  pruebas_coordenada_z_py.py  pruebas_robot_py.py
msg_srv_creator/: CMakeLists.txt  package.xml
msg_srv_creator/msg/: Array.msg  Arrayofarray.msg  Arrayofarrayuint.msg  Arrayuint.msg  Bbox3d.msg  Mask.msg
pcl_cpp/: CMakeLists.txt  package.xml
pcl_cpp/src/: calibration_cpp.cpp  pcl_cpp.cpp  pruebas_aruco_cpp.cpp  pruebas_cpp.cpp  voxelized.pcd
ros2_astra_camera/: .gitignore  README.MD
ros2_astra_camera/astra_camera/launch/: astra.launch.py
